# tum-eda-performance-simulator-etiss-plugin

./: .gitmodules  README.md
libs/monitors/variants/: CMakeLists.txt
libs/monitors/variants/AssemblyTrace_RV32/: CMakeLists.txt
libs/monitors/variants/AssemblyTrace_RV32/include/: AssemblyTrace_RV32_Monitor.h
libs/monitors/variants/AssemblyTrace_RV32/src/: AssemblyTrace_RV32_InstructionMonitors.cpp  AssemblyTrace_RV32_Monitor.cpp
libs/monitors/variants/AssemblyTrace_RV64/: CMakeLists.txt
libs/monitors/variants/AssemblyTrace_RV64/include/: AssemblyTrace_RV64_Monitor.h
libs/monitors/variants/AssemblyTrace_RV64/src/: AssemblyTrace_RV64_InstructionMonitors.cpp  AssemblyTrace_RV64_Monitor.cpp
libs/monitors/variants/CV32E40P/: CMakeLists.txt
libs/monitors/variants/CV32E40P/src/: CV32E40P_InstructionMonitors.cpp  CV32E40P_Monitor.cpp
libs/monitors/variants/CVA6/: CMakeLists.txt
libs/monitors/variants/CVA6/include/: CVA6_Monitor.h
libs/monitors/variants/CVA6/src/: CVA6_InstructionMonitors.cpp  CVA6_Monitor.cpp
libs/monitors/variants/InstructionTrace_RV32IM_Zicsr/: CMakeLists.txt
libs/monitors/variants/InstructionTrace_RV64IMF_Zicsr/: CMakeLists.txt
libs/monitors/variants/SimpleRISCV_H_fw_DynBrPred/: CMakeLists.txt
libs/monitors/variants/SimpleRISCV_H_fw_NoBrPred/: CMakeLists.txt
libs/monitors/variants/SimpleRISCV_H_fw_StaBrPred/: CMakeLists.txt
libs/monitors/variants/SimpleRISCV_H_nfw_DynBrPred/: CMakeLists.txt
libs/monitors/variants/SimpleRISCV_H_nfw_NoBrPred/: CMakeLists.txt
libs/monitors/variants/SimpleRISCV_H_nfw_StaBrPred/: CMakeLists.txt
(+30 files in other folders)
