
ADD_SUBDIRECTORY(AssemblyTrace_RV32)
ADD_SUBDIRECTORY(AssemblyTrace_RV64)
ADD_SUBDIRECTORY(CV32E40P)
ADD_SUBDIRECTORY(CVA6)
ADD_SUBDIRECTORY(InstructionTrace_RV32IM_Zicsr)
ADD_SUBDIRECTORY(InstructionTrace_RV64IMF_Zicsr)
ADD_SUBDIRECTORY(SimpleRISCV_H_fw_NoBrPred)
ADD_SUBDIRECTORY(SimpleRISCV_H_fw_StaBrPred)
ADD_SUBDIRECTORY(SimpleRISCV_H_fw_DynBrPred)
ADD_SUBDIRECTORY(SimpleRISCV_H_nfw_NoBrPred)
ADD_SUBDIRECTORY(SimpleRISCV_H_nfw_StaBrPred)
ADD_SUBDIRECTORY(SimpleRISCV_H_nfw_DynBrPred)

